deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvp-sample-bizlogic
  labels:
    appname: mvp-sample-bizlogic
spec:
  selector:
    matchLabels:
      appname: mvp-sample-bizlogic
  replicas: 1
  template:
    metadata:
      name: mvp-sample-bizlogic
      labels:
        appname: mvp-sample-bizlogic
    spec:
      containers:
        - name: mvp-sample-bizlogic
          image: bnkpoc/mvp-sample-bizlogic:1.0.0
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
