deploy/deploy-converted.yaml
#VERSION:1.2
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mvp-sample-bizlogic
  namespace: samples
  labels:
    app: mvp-sample-bizlogic
spec:
  serviceName: mvp-sample-bizlogic
  
  selector:
    matchLabels:
      app: mvp-sample-bizlogic
  replicas: 1
  template:
    metadata:
      name: mvp-sample-bizlogic
      labels:
        app: mvp-sample-bizlogic
    spec:
      serviceAccountName: default
      containers:
      - name: mvp-sample-bizlogic
        image: bastion.cmlee.kbstar.local:5005/happykube/mvp-sample-bizlogic:0.0.1
        imagePullPolicy: Always
        ports:
        - name: containerport
          containerPort: 8888
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
          limits:
            cpu: 1024m
            memory: 1024Mi
        
          
            
            
          
          
          
          
          
---
apiVersion: v1
kind: Service
metadata:
  name: mvp-sample-bizlogic
  namespace: samples  
spec:
  type: ClusterIP
  selector:
    app: mvp-sample-bizlogic
  ports:
  - name: port1
    port: 8888
    targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mvp-sample-bizlogic
  namespace: samples  
spec:
  rules:
  - host: mvp-sample-bizlogic.192.168.3.145.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: mvp-sample-bizlogic 
            port: 
              number: 8888
