deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-bizlogic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: hklee.biz-logic.169.56.84.35.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service
                name: mvp-sample-bizlogic
                port: 
                  number: 8888
